PZS-NG CHANGELOG
----------------

v1.0.8  --> 1.0.X  :
		- maziah fixed nfs.zst themefile.
		- added debug output in audiosort-bin and in createlink().
		- psxc-imdb v2.7i.
		- zyrex noticed a typo in stat announce - changed 'mB' to 'MB'.

v1.0.7  --> 1.0.8  : (r2252)
		- added support for vbr-old/vbr-new.
		- added more options to zsconfig - error msgs and benchmark output.
		- fix a bug in rescan when scanning new (not previously scanned) dirs.
		- fix a bug with rescan in 'quick' mode.
		- added '2007' and removed '2003' from list of allowed years in mp3.
		- on mp3 group-sort internal releases will not be renamed - only the
		  groupdir will.
		- the zipscript will no longer announce a release twice - dupe uploads
		  will be marked correctly, but no (normal) announce will happen in
		  glftpd.log.
		- added new variable/announce in bot on dupe releaseupload.
		- fixed bug on sfv creation/rescanning when case in sfv does not match
		  case of files.
v1.0.6  --> 1.0.7  : (r2230)
		- updated libcopy to v1.2 - fix for openbsd4.0.
		- added support for not sorting audio in certain dirs.
		- New option in zsconfig.h - audio_nosort_dirs - list of dirs where no
		  audiosorting should take place.
		- remove _INT from groupname in audio_group sorting.
		- added option to ignore certain languages in the mp3 sorting.
		- New option in zsconfig.h - audio_ignored_languages - list of ignored
		  languages.
		- fixed a bug in partial_on_noforce.
		- fixed a bug with no-nfo symlinks and false parentdir.
		- added a new option to incomplete-list.sh.
		- fixed a bug in cleanup where syms with absolute paths was ignored.
		- fix: ignore allowed_types when scanning an sfv.
		- fix: remove sfvdata when encountering a 'bad' sfv.
		- added option to allow slashes in filenames listed in the sfv.
		- New option in zsconfig.h - allow_slash_in_sfv - allow slashes in sfv.
		- added option to create sfv files on rescan.